# ParaView_Reader_for_LIGGGHTS

./: README.md  README.md~
python_macros/: update.py
reader_src/binary_reader/: CMakeLists.txt  README_bin  dump_custom.cpp  liggghts_binary_reader.cxx  liggghts_binary_reader.h  liggghts_binary_reader.xml  liggghts_binary_readerGUI.xml
reader_src/binary_reader_5.8.1/: CMakeLists.txt
reader_src/binary_reader_5.8.1/Plugin/: CMakeLists.txt  paraview.plugin
reader_src/binary_reader_5.8.1/Plugin/Reader/: CMakeLists.txt  liggghts_binary_reader.cxx  vtk.module
reader_src/bond_reader/: CMakeLists.txt  liggghts_bondreader.cxx  liggghts_bondreader.h  liggghts_bondreader.xml  liggghts_bondreaderGUI.xml
reader_src/bond_reader_5.8.1/: CMakeLists.txt
reader_src/bond_reader_5.8.1/Plugin/: CMakeLists.txt  paraview.plugin
reader_src/bond_reader_5.8.1/Plugin/Reader/: CMakeLists.txt  liggghts_bondreader.cxx  vtk.module
reader_src/forcechain_reader/: CMakeLists.txt  README_forcechain  liggghts_forcechainreader.cxx  liggghts_forcechainreader.h  liggghts_forcechainreader.xml  liggghts_forcechainreaderGUI.xml
reader_src/forcechain_reader_5.8.1/: CMakeLists.txt
reader_src/forcechain_reader_5.8.1/Plugin/: CMakeLists.txt  paraview.plugin
reader_src/forcechain_reader_5.8.1/Plugin/Reader/: CMakeLists.txt  liggghts_forcechainreader.cxx  liggghts_forcechainreader.h  liggghts_forcechainreader.xml  vtk.module
reader_src/reader_5.8.1/Plugin/: paraview.plugin
reader_src/reader_5.8.1/Plugin/Reader/: liggghts_reader.cxx  liggghts_reader.h
reader_src/rigid_reader/: CMakeLists.txt  README_rigid  README_rigid~  liggghts_rigids_reader.cxx  liggghts_rigids_reader.h  liggghts_rigids_reader.xml  liggghts_rigids_readerGUI.xml  quat_tranformation.py
reader_src/text_reader/: CMakeLists.txt  README_intelligent  README_intelligent~  liggghts_reader.cxx  liggghts_reader.h  liggghts_reader.xml  liggghts_readerGUI.xml  liggghts_reader_GUI.xml
reader_src/text_reader_5.8.1/: CMakeLists.txt
reader_src/text_reader_5.8.1/Plugin/: CMakeLists.txt  paraview.plugin
reader_src/text_reader_5.8.1/Plugin/Reader/: CMakeLists.txt  liggghts_reader.cxx  liggghts_reader.xml  vtk.module
